[gd_scene load_steps=19 format=3 uid="uid://ec7254tpq71t"]

[ext_resource type="Texture2D" uid="uid://du1484s086n1a" path="res://art/dungeon_background.jpg" id="1_6sbhe"]
[ext_resource type="Script" path="res://scenes/battle/battle.gd" id="1_qwpwj"]
[ext_resource type="PackedScene" uid="uid://n4qqgvyibnyi" path="res://scenes/card_target_selector/card_target_selector.tscn" id="3_6vo1o"]
[ext_resource type="AudioStream" uid="uid://siutennhwd0u" path="res://sound/8_bit_iced_village_lofi.mp3" id="3_mgtie"]
[ext_resource type="Resource" uid="uid://cygkvvslnbwl8" path="res://battle_data/battle_pools/default_battle_pool.tres" id="4_lpfsc"]
[ext_resource type="Script" path="res://scenes/battle/combat_manager.gd" id="5_65doh"]
[ext_resource type="PackedScene" uid="uid://b4htri0qxbxwh" path="res://combatants/combatant_handler.tscn" id="6_qtuhh"]
[ext_resource type="Script" path="res://scenes/ui/battle_ui.gd" id="7_fxyow"]
[ext_resource type="PackedScene" uid="uid://dch1yqotj1ulp" path="res://scenes/ui/hand_ui.tscn" id="10_bqjdc"]
[ext_resource type="PackedScene" uid="uid://dp6xtaaw1550m" path="res://scenes/ui/mana_ui.tscn" id="11_7s4lt"]
[ext_resource type="PackedScene" uid="uid://dkeapvki453k0" path="res://scenes/ui/tooltip.tscn" id="12_m4oqx"]
[ext_resource type="Theme" uid="uid://hldgq62fqimu" path="res://main_theme.tres" id="13_64wys"]
[ext_resource type="Script" path="res://scenes/ui/red_flash.gd" id="15_xax5l"]
[ext_resource type="PackedScene" uid="uid://bpdjh3m0574gl" path="res://scenes/ui/battle_over_panel.tscn" id="17_2px82"]
[ext_resource type="PackedScene" uid="uid://8tiqgaf1eoky" path="res://scenes/ui/card_pile_opener.tscn" id="17_jojp6"]
[ext_resource type="Texture2D" uid="uid://byu1e1wjfsnjc" path="res://art/deck-of-illusions.webp" id="19_cjxii"]
[ext_resource type="PackedScene" uid="uid://cpq05ker28vmd" path="res://scenes/ui/card_pile_view.tscn" id="21_6nl8j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ofmyv"]
size = Vector2(1152, 410)

[node name="Battle" type="Node2D"]
script = ExtResource("1_qwpwj")
music = ExtResource("3_mgtie")
battle_pool = ExtResource("4_lpfsc")
metadata/_edit_lock_ = true

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0.631373, 0.631373, 0.631373, 1)
scale = Vector2(1.80156, 1.80278)
texture = ExtResource("1_6sbhe")
centered = false
metadata/_edit_lock_ = true

[node name="CardDropArea" type="Area2D" parent="."]
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDropArea"]
position = Vector2(576, 205)
shape = SubResource("RectangleShape2D_ofmyv")
debug_color = Color(0, 0.6, 0.701961, 0.133333)

[node name="CombatManager" type="Node" parent="."]
script = ExtResource("5_65doh")

[node name="AllyHandler" parent="CombatManager" instance=ExtResource("6_qtuhh")]

[node name="PlayerHandler" parent="CombatManager" instance=ExtResource("6_qtuhh")]

[node name="EnemyHandler" parent="CombatManager" instance=ExtResource("6_qtuhh")]

[node name="CardTargetSelector" parent="." instance=ExtResource("3_6vo1o")]

[node name="BattleUI" type="CanvasLayer" parent="." groups=["ui_layer"]]
script = ExtResource("7_fxyow")

[node name="HandUI" parent="BattleUI" instance=ExtResource("10_bqjdc")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 0.0
offset_top = -139.0
offset_right = 0.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 0

[node name="ManaUI" parent="BattleUI" instance=ExtResource("11_7s4lt")]

[node name="Tooltip" parent="BattleUI" instance=ExtResource("12_m4oqx")]
offset_left = -177.0
offset_top = 80.0
offset_right = 183.0
offset_bottom = 176.0

[node name="EndTurnButton" type="Button" parent="BattleUI"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -61.0
offset_right = -22.0
offset_bottom = -22.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("13_64wys")
text = "End Turn"

[node name="DrawPileButton" parent="BattleUI" node_paths=PackedStringArray("counter") instance=ExtResource("17_jojp6")]
unique_name_in_owner = true
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = -60.0
offset_right = 120.0
offset_bottom = -20.0
grow_vertical = 0
counter = NodePath("Counter")

[node name="Counter" type="Label" parent="BattleUI/DrawPileButton"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -50.0
offset_right = 9.0
offset_bottom = -27.0
grow_horizontal = 0
grow_vertical = 0
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DiscardPileButton" parent="BattleUI" node_paths=PackedStringArray("counter") instance=ExtResource("17_jojp6")]
unique_name_in_owner = true
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 964.0
offset_top = -60.0
offset_right = 1004.0
offset_bottom = -20.0
grow_vertical = 0
texture_normal = ExtResource("19_cjxii")
counter = NodePath("Counter")

[node name="Counter" type="Label" parent="BattleUI/DiscardPileButton"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -50.0
offset_right = -31.0
offset_bottom = -27.0
grow_horizontal = 0
grow_vertical = 0
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RedFlash" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource("15_xax5l")

[node name="ColorRect" type="ColorRect" parent="RedFlash"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.756863, 0.0313726, 0, 0)

[node name="Timer" type="Timer" parent="RedFlash"]
wait_time = 0.2
one_shot = true

[node name="BattleOverLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="BattleOverPanel" parent="BattleOverLayer" instance=ExtResource("17_2px82")]
visible = false

[node name="CardPileViews" type="CanvasLayer" parent="."]
layer = 4

[node name="DrawPileView" parent="CardPileViews" instance=ExtResource("21_6nl8j")]
unique_name_in_owner = true
visible = false

[node name="DiscardPileView" parent="CardPileViews" instance=ExtResource("21_6nl8j")]
unique_name_in_owner = true
visible = false
